--- a/MediaPortalTVPlugin/MediaBrowser.Plugins.MediaPortal.csproj
+++ b/MediaPortalTVPlugin/MediaBrowser.Plugins.MediaPortal.csproj
@@ -1,129 +1,38 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30B2A395-5E43-454F-8093-DAF307D6D4FB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MediaBrowser.Plugins.MediaPortal</RootNamespace>
-    <AssemblyName>MediaBrowser.Plugins.MediaPortal</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
+    <TargetFrameworks>netstandard2.0;net46;</TargetFrameworks>
+    <AssemblyVersion>1.8.0.0</AssemblyVersion>
+    <FileVersion>1.8.0.0</FileVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="MediaBrowser.Common, Version=3.2.14.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.0.700\lib\portable-net45+win8+wpa81\MediaBrowser.Common.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MediaBrowser.Controller, Version=3.2.14.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Server.Core.3.0.700\lib\net45\MediaBrowser.Controller.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MediaBrowser.Model, Version=3.2.14.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MediaBrowser.Common.3.0.700\lib\portable-net45+win8+wpa81\MediaBrowser.Model.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Runtime.Caching" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml" />
+    <None Remove="Configuration\configPage.html" />
+    <None Remove="Images\Kids-thumb.png" />
+    <None Remove="Images\Live Shows-thumb.png" />
+    <None Remove="Images\MediaPortal-thumb.png" />
+    <None Remove="Images\Movies-thumb.png" />
+    <None Remove="Images\News &amp; Documentary-thumb.png" />
+    <None Remove="Images\Other Shows-thumb.png" />
+    <None Remove="Images\Sports-thumb.png" />
+    <None Remove="Images\TV Shows-thumb.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Configuration\PluginConfiguration.cs" />
-    <Compile Include="Entities\ChannelSorting.cs" />
-    <Compile Include="Entities\ChannelSortOption.cs" />
-    <Compile Include="Entities\ScheduleDefaults.cs" />
-    <Compile Include="Entities\SerializableDictionary.cs" />
-    <Compile Include="Helpers\ExceptionHelper.cs" />
-    <Compile Include="Helpers\GenreMapper.cs" />
-    <Compile Include="Helpers\TaskScheduler.cs" />
-    <Compile Include="Services\Entities\ActiveTunerCard.cs" />
-    <Compile Include="Services\Entities\ScheduledRecording.cs" />
-    <Compile Include="Services\Entities\WebTranscodingInfo.cs" />
-    <Compile Include="Services\Entities\WebStreamingSession.cs" />
-    <Compile Include="Services\Entities\WebCardType.cs" />
-    <Compile Include="Services\Entities\TunerCard.cs" />
-    <Compile Include="Services\Entities\User.cs" />
-    <Compile Include="Services\Entities\WebScheduleType.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Services\Entities\ChannelGroup.cs" />
-    <Compile Include="Services\Entities\WebContentType.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Services\Entities\WebMediaType.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Helpers\GeneralExtensions.cs" />
-    <Compile Include="Helpers\PluginLogger.cs" />
-    <Compile Include="Interfaces\IPluginLogger.cs" />
-    <Compile Include="MediaPortal1TVService.cs" />
-    <Compile Include="Plugin.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerApiEndpoints.cs" />
-    <Compile Include="Services\Entities\Channel.cs" />
-    <Compile Include="Services\Entities\Program.cs" />
-    <Compile Include="Services\Entities\Recording.cs" />
-    <Compile Include="Services\Entities\Schedule.cs" />
-    <Compile Include="Services\Entities\ServiceDescription.cs" />
-    <Compile Include="Services\Entities\StreamingDetails.cs" />
-    <Compile Include="Services\Entities\WebBoolResult.cs" />
-    <Compile Include="Services\Entities\WebSortField.cs" />
-    <Compile Include="Services\Entities\WebSortOrder.cs" />
-    <Compile Include="Services\Entities\WebStringResult.cs" />
-    <Compile Include="Services\Exceptions\ServiceAuthenticationException.cs" />
-    <Compile Include="Services\Proxies\ProxyBase.cs" />
-    <Compile Include="Services\Proxies\StreamingServiceProxy.cs" />
-    <Compile Include="Services\Entities\TranscoderProfile.cs" />
-    <Compile Include="ServerEntryPoint.cs" />
-    <Compile Include="Services\Proxies\TVServiceProxy.cs">
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
+
   <ItemGroup>
     <EmbeddedResource Include="Configuration\configPage.html" />
+    <EmbeddedResource Include="Images\Kids-thumb.png" />
+    <EmbeddedResource Include="Images\Live Shows-thumb.png" />
+    <EmbeddedResource Include="Images\MediaPortal-thumb.png" />
+    <EmbeddedResource Include="Images\Movies-thumb.png" />
+    <EmbeddedResource Include="Images\News &amp; Documentary-thumb.png" />
+    <EmbeddedResource Include="Images\Other Shows-thumb.png" />
+    <EmbeddedResource Include="Images\Sports-thumb.png" />
+    <EmbeddedResource Include="Images\TV Shows-thumb.png" />
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="mediabrowser.server.core" Version="3.3.36-beta" />
+    <PackageReference Include="SkiaSharp" Version="1.58.1" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>if exist "C:\Users\Alex\Documents\Git Repos\MediaBrowser\ProgramData-Server\plugins" xcopy "$(TargetPath)" "C:\Users\Alex\Documents\Git Repos\MediaBrowser\ProgramData-Server\plugins" /y</PostBuildEvent>
-  </PropertyGroup>
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
