--- a/MediaBrowser.Plugins.MediaPortal/MediaBrowser.Plugins.MediaPortal.csproj
+++ b/MediaBrowser.Plugins.MediaPortal/MediaBrowser.Plugins.MediaPortal.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net46;</TargetFrameworks>
-    <AssemblyVersion>1.8.0.0</AssemblyVersion>
-    <FileVersion>1.8.0.0</FileVersion>
+    <AssemblyVersion>1.8.2.0</AssemblyVersion>
+    <FileVersion>1.8.2.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,7 +32,13 @@
 
   <ItemGroup>
     <PackageReference Include="mediabrowser.server.core" Version="3.3.36-beta" />
-    <PackageReference Include="SkiaSharp" Version="1.58.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SkiaSharp">
+      <HintPath>..\sources\SkiaSharp.dll</HintPath>
+      <SpecificVersion>false</SpecificVersion>
+    </Reference>
   </ItemGroup>
 
 </Project>
