--- a/MediaBrowser.Plugins.MediaPortal/MediaBrowser.Plugins.MediaPortal.csproj
+++ b/MediaBrowser.Plugins.MediaPortal/MediaBrowser.Plugins.MediaPortal.csproj
@@ -2,46 +2,25 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;</TargetFrameworks>
-    <AssemblyVersion>1.8.9.0</AssemblyVersion>
-    <FileVersion>1.8.9.0</FileVersion>
+    <AssemblyVersion>1.9.4.0</AssemblyVersion>
+    <FileVersion>1.9.4.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Configuration\configPage.html" />
-    <None Remove="Images\Kids-thumb.png" />
-    <None Remove="Images\Live Shows-thumb.png" />
-    <None Remove="Images\MediaPortal-thumb.png" />
-    <None Remove="Images\Movies-thumb.png" />
-    <None Remove="Images\News &amp; Documentary-thumb.png" />
-    <None Remove="Images\Other Shows-thumb.png" />
-    <None Remove="Images\Sports-thumb.png" />
-    <None Remove="Images\TV Shows-thumb.png" />
     <None Remove="thumb.png" />
+    <None Remove="web\mediaportal.html" />
+    <None Remove="web\mediaportal.js" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Configuration\configPage.html" />
-    <EmbeddedResource Include="Images\Kids-thumb.png" />
-    <EmbeddedResource Include="Images\Live Shows-thumb.png" />
-    <EmbeddedResource Include="Images\MediaPortal-thumb.png" />
-    <EmbeddedResource Include="Images\Movies-thumb.png" />
-    <EmbeddedResource Include="Images\News &amp; Documentary-thumb.png" />
-    <EmbeddedResource Include="Images\Other Shows-thumb.png" />
-    <EmbeddedResource Include="Images\Sports-thumb.png" />
-    <EmbeddedResource Include="Images\TV Shows-thumb.png" />
     <EmbeddedResource Include="thumb.png" />
+    <EmbeddedResource Include="web\mediaportal.html" />
+    <EmbeddedResource Include="web\mediaportal.js" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="mediabrowser.server.core" Version="4.0.0.2" />
-    <PackageReference Include="System.Memory" Version="4.5.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="SkiaSharp">
-      <HintPath>..\sources\SkiaSharp.dll</HintPath>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
+    <PackageReference Include="mediabrowser.server.core" Version="4.7.0.30-beta1" />
+    <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
 
 </Project>
