--- a/MediaBrowser.Plugins.MediaPortal/MediaBrowser.Plugins.MediaPortal.csproj
+++ b/MediaBrowser.Plugins.MediaPortal/MediaBrowser.Plugins.MediaPortal.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;</TargetFrameworks>
-    <AssemblyVersion>1.9.4.0</AssemblyVersion>
-    <FileVersion>1.9.4.0</FileVersion>
+    <AssemblyVersion>1.9.8.0</AssemblyVersion>
+    <FileVersion>1.9.8.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="mediabrowser.server.core" Version="4.7.0.30-beta1" />
-    <PackageReference Include="System.Memory" Version="4.5.3" />
+    <PackageReference Include="mediabrowser.server.core" Version="4.7.0.32-beta" />
+    <PackageReference Include="System.Memory" Version="4.5.4" />
   </ItemGroup>
 
 </Project>
